--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,58 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
+@import url("https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500;1,600;1,700;1,800&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400;1,700;1,900&display=swap");
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+@layer utilities {
+	/* .text-stroke {
+		text-shadow: 0 0 4px black, 0 0 4px black, 0 0 4px black, 0 0 4px black;
+	} */
+
+	.text-stroke {
+		-webkit-text-stroke: 2px #000;
+		text-shadow: 0 0 2px black, 0 0 2px black, 0 0 2px black, 0 0 2px black;
+	}
+
+	.opacity-low {
+		position: relative;
+	}
+
+	.opacity-low::before {
+		content: "";
+		position: absolute;
+		top: 0px;
+		right: 0px;
+		bottom: 0px;
+		left: 0px;
+		opacity: 0.5;
+		z-index: 1;
+		background-color: #fff;
+	}
+	.opacity-extra-low {
+		position: relative;
+	}
+
+	.opacity-extra-low::before {
+		content: "";
+		position: absolute;
+		top: 0px;
+		right: 0px;
+		bottom: 0px;
+		left: 0px;
+		opacity: 0.8;
+		z-index: 1;
+		background-color: #fff;
+	}
+
+	.loading-spinner {
+		width: 40px;
+		height: 40px;
+		border: 5px solid #0d0f30;
+		border-top-color: #ab46d2;
+		border-radius: 50%;
+		animation: loading 1s ease-out infinite;
+		z-index: 1000;
+	}
 }
